mtls-https/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mtls-https
  labels:
    linkerd.io/inject: enabled  # Enable Linkerd proxy injection for mTLS
